--- a/register_packager_tests/register_packager_tests.csproj
+++ b/register_packager_tests/register_packager_tests.csproj
@@ -6,12 +6,17 @@
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <Platforms>x64</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="AwesomeAssertions" Version="8.1.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
         <PackageReference Include="xunit" Version="2.9.3" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
